--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -9,6 +9,14 @@ body {
   color: #ffffff;
 }
 
+
+@media screen and (min-width: 1440px) {
+  body {
+    display: grid;
+    grid-template-columns: auto 1fr;
+  }
+}
+
 .cabecalho {
   display: flex;
   justify-content: space-between;
@@ -19,7 +27,7 @@ body {
 }
 
 .cabecalho__menu i::before {
-  content: "\e904";
+  content: '\e904';
   font-size: 24px;
 }
 
@@ -32,6 +40,59 @@ body {
   width: 40px;
 }
 
+.cabecalho__perfil {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cabecalho {
+    background-color: #10232a;
+    display: grid;
+    column-gap: 32px;
+    grid-template-columns: 1fr auto;
+    padding: 16px 60px;
+    height: 80px;
+    box-sizing: border-box;
+    grid-column: 2;
+  }
+
+  .cabecalho__menu {
+    display: none;
+  }
+
+  .cabecalho__logo {
+    display: none;
+  }
+
+  .cabecalho__perfil {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    column-gap: 8px;
+    align-items: center;
+    justify-self: flex-end;
+    color: #95999c;
+    padding: 8px 32px;
+    border-right: 1px solid #95999c;
+  }
+
+  .cabecalho__perfil::before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 32px;
+    background-image: url(../img/profile_2.png);
+    background-size: contain; 
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .cabecalho__perfil::after {
+    content: "\e90d";
+    color: #ffffff;
+    font-size: 1.5rem;
+  }
+}
+
 .menu-lateral {
   display: flex;
   flex-direction: column;
@@ -40,13 +101,12 @@ body {
   height: 100vh;
   position: absolute;
   left: -100vw;
-  transition: left .25s;
-  z-index: 99;
+  transition: 0.25s;
 }
 
 .menu-lateral--ativo {
   left: 0;
-  transition: .25s;
+  transition: 0.25s;
 }
 
 .menu-lateral__logo {
@@ -57,7 +117,7 @@ body {
 
 .menu-lateral__link {
   height: 64px;
-  color: #95999C;
+  color: #95999c;
   padding-left: 64px;
   display: flex;
   align-items: center;
@@ -66,11 +126,11 @@ body {
 .menu-lateral__link--ativo {
   color: #ffffff;
   padding-left: 56px;
-  border-left: 8px solid #FFFFFF ;
+  border-left: 8px solid #ffffff;
 }
 
 .menu-lateral__link::before {
-  content: "";
+  content: "\e900";
   width: 24px;
   height: 24px;
   font-size: 24px;
@@ -102,10 +162,20 @@ body {
   content: "\e90a";
 }
 
+@media screen and (min-width: 1440px){
+  .menu-lateral {
+    position: static;
+    width: 200px;
+    grid-column: 1;
+    grid-row: 1 / span 2;
+  }
+}
+
 .principal {
   padding: 24px 16px;
   display: grid;
   gap: 16px;
+  
 }
 
 .titulo-pagina {
@@ -118,11 +188,37 @@ body {
   font-weight: 700;
 }
 
+@media screen and (min-width: 1440px) {
+  .principal {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-areas:
+      "titulo-pagina titulo-pagina titulo-pagina"
+      "destaque-video destaque-video videos-recentes" 
+      "secao-videos secao-videos secao-videos"
+      "produtos-recentes destaque-produtos destaque-produtos"
+      "secao-produtos secao-produtos secao-produtos"
+    ;
+    column-gap: 32px;
+    padding: 16px 60px;
+    grid-column: 2;
+  }
+
+  .titulo-secao {
+    grid-column: span 4;
+  }
+  
+}
+
 .cartao {
   width: 100%;
   border-radius: 15px;
   overflow: hidden;
-  background-color: #2C343A;
+  background-color: #2c343a;
+}
+
+.cartao__imagem--desktop{
+  display: none;
 }
 
 .cartao--destaque {
@@ -136,7 +232,7 @@ body {
   gap: 8px;
 }
 
-.cartao__destaque{
+.cartao__destaque {
   grid-column: span 2;
 }
 
@@ -147,7 +243,7 @@ body {
 }
 
 .cartao__perfil {
-  color: #95999C;
+  color: #95999c;
   font-size: 0.9rem;
   grid-column: span 2;
 }
@@ -155,24 +251,24 @@ body {
 .cartao__info {
   display: flex;
   align-items: center;
-  color: #95999C;
+  color: #95999c;
 }
 
 .cartao__info--tempo::before {
   content: "\e90c";
-  margin-right:  8px;
+  margin-right: 8px;
 }
 
 .cartao__info--visualizacao::before {
-  content: "\e90f";
-  margin-right:  8px;
+  content: '\e90f';
+  margin-right: 8px;
 }
 
 .cartao__botao {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #0480DC;
+  background-color: #0480dc;
   width: 40px;
   height: 40px;
   border-radius: 10px;
@@ -190,8 +286,81 @@ body {
   grid-column: span 2;
 }
 
-.cartao__botao--destaque::before{
+.cartao__botao--destaque::before {
   margin-right: 8px;
+}
+
+.cartao--recentes {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .cartao--destaque{
+    margin-bottom: 0;
+  }
+
+  .cartao__imagem--mobile {
+    display: none;
+  }
+
+  .cartao__imagem--desktop{
+    display: block;
+  }
+
+  .cartao__botao--destaque {
+    grid-column: auto;
+    padding: 16px 8px;
+  }
+
+  .cartao--recentes {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    row-gap: 24px;
+    width: 256px;
+    padding: 16px;
+    box-sizing: border-box;
+    align-self: flex-start;
+  }
+
+  .cartao--recentes .cartao__titulo {
+    grid-column: auto;
+  }
+
+  .cartao__link{
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: #0480dc;
+    justify-self: flex-end;
+  }
+
+  .cartao_lista {
+    display: grid;
+    row-gap: 16px;
+    grid-column:span 2;
+  }
+
+  .cartao__item {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
+  }
+
+  .cartao__item--thumbnail {
+    width: 32px;
+    grid-row: span 2;
+  }
+
+  .cartao__item-titulo {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+    font-weight: 700;
+  }
+
+  .cartao__item-perfil {
+    font-size: 0.8rem;
+    color: #95999c;
+    }
 }
 
 .secao {
@@ -199,3 +368,71 @@ body {
   gap: 16px;
 }
 
+@media screen and (min-width: 1440px) {
+  .secao {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .destaque-video {
+    grid-area: destaque-video;
+  }
+  
+  .videos-recentes {
+    grid-area: videos-recentes;
+  }
+  
+  .secao-videos {
+    grid-area: secao-videos;
+  }
+  
+  .destaque-produtos {
+    grid-area: destaque-produtos;
+  }
+  
+  .produtos-recentes {
+    grid-area: produtos-recentes;
+  }
+  
+  .secao-produtos {
+    grid-area: secao-produtos;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .principal--picos {
+    grid-template-areas: 
+    "titulo-pagina titulo-pagina titulo-pagina"
+    "picos-mapa picos-mapa picos-favoritos"
+    "secao-picos-mais-visitados secao-picos-mais-visitados secao-picos-mais-visitados"
+    ;
+  }
+}
+
+.picos-mapa {
+  width: 100%;
+  height: 468px;
+  background-image: url(../img/mapa-picos.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 15px;
+}
+
+.cartao__botao--pico::before {
+  content: "\e908";
+  font-size: 24px;
+}
+
+@media screen and (min-width: 1440px) {
+  .picos-mapa {
+    grid-area: picos-mapa;
+  }
+  
+  .picos-favoritos {
+    grid-area: picos-favoritos;
+  }
+
+  .secao-picos-mais-visitados {
+    grid-area: secao-picos-mais-visitados;
+  }
+}
